2006-11-29  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (do_vfp_sp_const, do_vfp_dp_const): Fix operans
	encoding.

2006-11-27  Sterling Augustine  <sterling@tensilica.com>

	* config/tc-xtensa.c (xtensa_sanity_check): Check for RELAX_IMMED
	as the first slot_subtype, not the frag subtype.

2006-11-27  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (XSHAL_ABI): Add default definition.
	(directive_state): Disable scheduling by default.
	(xtensa_add_config_info): New.
	(xtensa_end): Call xtensa_add_config_info.

2006-11-27  Eric Botcazou  <ebotcazou@adacore.com>

	* config/tc-sparc.c (tc_gen_reloc): Turn aligned relocs into
	their unaligned counterparts in debugging sections.

2006-11-24  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-spu.c (md_pseudo_table): Add eqv and .eqv.

2006-11-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* config/tc-arm.h (md_cons_align): Define.
	(mapping_state): New prototype.
	* config/tc-arm.c (mapping_state): Make global.

2006-11-22  Alan Modra  <amodra@bigpond.net.au>

	* config/obj-elf.c (obj_elf_version): Use memcpy rather than strcpy.

2006-11-16  Mei ligang  <ligang@sunnorth.com.cn>

	* config/tc-score.c (score_relax_frag): If next frag contains 32 bit
	branch instruction, handle it specially.
	(score_insns): Modify 32 bit branch instruction.

2006-11-16  Alan Modra  <amodra@bigpond.net.au>

	* symbols.c (resolve_symbol_value): Formatting.

2006-11-15  Jan Beulich  <jbeulich@novell.com>

	PR/3469
	* symbols.c (symbol_clone): Mark symbol ending up not on symbol
	chain by linking it to itself.
	(resolve_symbol_value): Also check symbol_shadow_p().
	(symbol_shadow_p): New.
	* symbols.h (symbol_shadow_p): Declare.

2006-11-12  Mark Shinwell  <shinwell@codesourcery.com>

	* config/tc-arm.c (do_t_czb): Rename to do_t_cbz.
	(insns): Adjust accordingly.
	(md_apply_fix): Alter comments to use CBZ instead of CZB.

2006-11-10  Pedro Alves <pedro_alves@portugalmail.pt>
